--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "mongoose": "^4.11.7",
+    "passport": "^0.4.0",
+    "passport-hash": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose-email": "^0.1.3",
     "react-router-dom": "^4.1.2"
   }
 }
