--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finalproject",
+  "name": "cast_off",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -18,13 +18,14 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "express-session": "^1.15.6",
     "mongoose": "^4.11.7",
     "passport": "^0.4.0",
-    "passport-hash": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose-email": "^0.1.3",
+    "passport-local-mongoose": "^4.4.0",
     "react-router-dom": "^4.1.2"
   }
 }
