--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.16.2",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
+    "cors": "^2.8.4",
     "express": "^4.15.4",
     "moment": "^2.19.3",
     "mongoose": "^4.11.7",
